k8s-demos-exercices-ok/app-vote/secret/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: result
  name: result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
        - image: mohamed1780/result
          name: result
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: result
