k8s-demos-exercices-ok/app-vote/secret/result-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: result-ui
  name: result-ui
spec:
  type: NodePort
  ports:
    - name: "result-ui-service"
      port: 5000
      targetPort: 80
      nodePort: 31001
  selector:
    app: result-ui
